fixed buttons for sponsors on mobile/large screens

--- a/styleSponsors.css
+++ b/styleSponsors.css
@@ -306,7 +306,7 @@
         font-size: 3rem;
     }
     .sponsor-btn {
-        top: 100px
+        top: 250px
     }
 }
 
